@@ -1,8 +1,11 @@
 /**
    @file alarmtracker.c
 
-   Track the alarm state from the alarm queue indications sent by timed.
-   This is needed for device state selection by the state module.
+   Track the alarm state from the alarm queue indications sent by the time daemon (timed).
+   This is needed for device state selection in the state module;
+   if an alarm is set, we go to the acting dead state instead of a reboot or
+   shutdown. This allows the device to wake up due to an alarm.
+
    <p>
    Copyright (C) 2009-2010 Nokia Corporation.
 
@@ -42,6 +45,8 @@
 #include <dsme/protocol.h>
 #include <dsme/alarm_limit.h>
 
+#include <iphbd/iphb_internal.h>
+
 #include <stdio.h>
 #include <limits.h>
 #include <time.h>
@@ -49,6 +54,10 @@
 #include <string.h>
 
 
+/*
+ * Store the alarm queue state in a file; it is used to restore the alarm queue state
+ * when the module is loaded.
+ */
 #define ALARM_STATE_FILE     "/var/lib/dsme/alarm_queue_status"
 #define ALARM_STATE_FILE_TMP "/var/lib/dsme/alarm_queue_status.tmp"
 
@@ -61,8 +70,18 @@ static bool   external_state_alarm_set    = false;
 
 static dsme_timer_t alarm_state_transition_timer = 0;
 
+static void schedule_next_wakeup(void)
+{
+    DSM_MSGTYPE_WAIT msg = DSME_MSG_INIT(DSM_MSGTYPE_WAIT);
+    msg.req.mintime = 0;
+    msg.req.maxtime = msg.req.mintime + 120;
+    msg.req.pid     = 0;
+    msg.data        = 0;
 
-static void save_alarm_queue_status_cb(void)
+    broadcast_internally(&msg);
+}
+
+static void save_alarm_queue_status(void)
 {
   if (alarm_state_file_up_to_date) {
       return;
@@ -108,6 +127,11 @@ static void save_alarm_queue_status_cb(void)
       /* do not retry to avoid spamming the log */
       alarm_state_file_up_to_date = true;
   }
+}
+
+DSME_HANDLER(DSM_MSGTYPE_WAKEUP, client, msg)
+{
+  save_alarm_queue_status();
 }
 
 static void restore_alarm_queue_status(void)
@@ -234,9 +258,8 @@ static void alarm_queue_status_ind(const DsmeDbusMessage* ind)
 
         dsme_log(LOG_DEBUG, "got new alarm: %ld", alarm_queue_head);
 
-        /* save alarm queue status in the logger thread */
         alarm_state_file_up_to_date = false;
-        dsme_log_wakeup();
+        schedule_next_wakeup();
     } else {
         dsme_log(LOG_DEBUG, "got old alarm: %ld", alarm_queue_head);
     }
@@ -275,6 +298,7 @@ DSME_HANDLER(DSM_MSGTYPE_STATE_QUERY, client, req)
 }
 
 module_fn_info_t message_handlers[] = {
+  DSME_HANDLER_BINDING(DSM_MSGTYPE_WAKEUP),
   DSME_HANDLER_BINDING(DSM_MSGTYPE_DBUS_CONNECT),
   DSME_HANDLER_BINDING(DSM_MSGTYPE_DBUS_DISCONNECT),
   DSME_HANDLER_BINDING(DSM_MSGTYPE_STATE_QUERY),
@@ -292,9 +316,6 @@ void module_init(module_t* handle)
 
   restore_alarm_queue_status();
 
-  /* attach a callback for saving alarms from the logger thread */
-  dsme_log_cb_attach(save_alarm_queue_status_cb);
-
   set_alarm_state();
 }
 
@@ -302,7 +323,7 @@ void module_fini(void)
 {
   dsme_dbus_unbind_signals(&bound, signals);
 
-  dsme_log_cb_detach(save_alarm_queue_status_cb);
+  save_alarm_queue_status();
 
   dsme_log(LOG_DEBUG, "alarmtracker.so unloaded");
 }
