@@ -3,6 +3,13 @@ dsme (0.62.1) unstable; urgency=low
   [Simo Piiroinen]
   * Improve dsmetool error handling (Fixes: NB#269307)
 
+  [Antti Virtanen]
+  * Include process name in iphb module log messages if verbose logging used.
+
+  [Jyrki Hämäläinen]
+  * Remove log callback function support as it is only used in the alarmtracker module.
+  * Use IPHB wakeups for saving the alarm queue status file.
+
  -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Thu, 08 Sep 2011 13:19:52 +0000
 
 dsme (0.61.59) unstable; urgency=low
